--- a/2015/01/18_1222_2014_summary.rst
+++ b/2015/01/18_1222_2014_summary.rst
@@ -103,3 +103,7 @@ Plans for 2015
 - Learn AngularJS
 - DynamoDB book
 - Leave more time for sport/relax
+
+.. info::
+    :tags: Life
+    :place: Phuket, Thailand
