--- a/2015/01/18_1222_2014_summary.rst
+++ b/2015/01/18_1222_2014_summary.rst
@@ -11,7 +11,7 @@ New Year abroad
 A lot of people was met and places was seen
 -------------------------------------------
 
-Want to say thanks
+Thanks goes
 
 to Marat who organized free travellers meetup on Phuket,
 
