added django-nickedit post

--- a/2015/01/18_1222_2014_summary.rst
+++ b/2015/01/18_1222_2014_summary.rst
@@ -48,7 +48,7 @@ I like this city, especially in summer.
 Kyiv
 ----
 
-Lived in Kiev for 8 months.
+Lived in Kyiv for 8 months.
 
 Ukrainian entrepreneur
 ----------------------
