--- a/2015/01/18_1222_2014_summary.rst
+++ b/2015/01/18_1222_2014_summary.rst
@@ -23,6 +23,8 @@ to Andrey, Vova, Tonya, Sasha and all people I met on Nai Harn and Panva,
 
 to tam Hubert for his lections on Koh Samui,
 
+to Fahlo dev team.
+
 I am sincerely appreciate.
 
 First hitchhiking experience and my birthday
