--- a/2015/01/18_1222_2014_summary.rst
+++ b/2015/01/18_1222_2014_summary.rst
@@ -15,7 +15,7 @@ Thanks goes
 
 to Marat who organized free travellers meetup on Phuket,
 
-to Lera for english lessons an yoga on Ao Yon beach,
+to Lera for english lessons and yoga on Ao Yon beach,
 
 to Dasha who showed me a lot of places on Phuket I never find myself,
 
