--- a/2015/01/18_1222_2014_summary.rst
+++ b/2015/01/18_1222_2014_summary.rst
@@ -42,7 +42,7 @@ First motorbike crashes
 
 Wounds heals, experience remains. Thanks goes to old man from motorbike repairing shop on Ravai, he did his work well.
 
-Autumn in Starobelsk
+Autumn in Starobilsk
 --------------------
 
 I like this city, especially in summer.
