--- a/2015/01/18_1222_2014_summary.rst
+++ b/2015/01/18_1222_2014_summary.rst
@@ -42,6 +42,16 @@ First motorbike crashes
 
 Wounds heals, experience remains. Thanks goes to old man from motorbike repairing shop on Ravai, he did his work well.
 
+Meditation retreat on Samui
+---------------------------
+
+`Dipabhāvan Meditation Center <http://dipabhavan.weebly.com/>`__
+
+.. image:: https://raw.githubusercontent.com/nanvel/blog/master/2015/01/retreat_samui.jpg
+    :width: 600px
+    :alt: Dipabhavan Meditation Center, Samui
+    :align: left
+
 Autumn in Starobilsk
 --------------------
 
