fix 2014 summary language

--- a/2015/01/18_1222_2014_summary.rst
+++ b/2015/01/18_1222_2014_summary.rst
@@ -17,7 +17,7 @@ to Marat who organized free travellers meetup on Phuket,
 
 to Lera for english lessons and yoga on Ao Yon beach,
 
-to Dasha who showed me a lot of places on Phuket I never find myself,
+to Dasha who showed me a lot of places on Phuket I would never find myself,
 
 to Andrey, Vova, Tonya, Sasha and all people I met on Nai Harn and Panva,
 
@@ -103,7 +103,7 @@ I decide that it easier to write and store my blog posts in restructured text fo
 Stop my university education
 ------------------------------
 
-8 years in university it too much. And my university is under control of terrorists now. I decided that now is a right time to stop my university study, besides in last time I don't find anything interesting/useful for me in the university.
+8 years in university is too much. And my university is under control of terrorists now. I decided that now is a right time to stop my university study, besides in last time I don't find anything interesting/useful for me in the university.
 
 Plans for 2015
 --------------
